Frontend/src/assets/styles/main.css
.home-background {
  background-image: url("../images/stacked-waves-haikei.svg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  height: 100vh;
}

.home-center {
  padding-top: 20%;
}

.home-title h1 {
  text-align: center;
  font-weight: 800;
  color: white;
}
.home-title h6 {
  text-align: center;
  color: white;
  margin-left: 150px;
  margin-right: 150px;
}
a:hover {
  cursor: pointer;
  color: brown;
  text-decoration: none;
}

.home {
  color: white;
  padding-top: 50px;
  padding-left: 100px;
}

/* CSS */
.button-28 {
  appearance: none;
  background-color: transparent;
  border: 2px solid #ffffff;
  border-radius: 15px;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  font-weight: 600;
  line-height: normal;
  margin: 0;
  min-height: 60px;
  min-width: 0;
  outline: none;
  padding: 16px 24px;
  text-align: center;
  text-decoration: none;
  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  width: 100%;
  will-change: transform;
}

.button-28:disabled {
  pointer-events: none;
}

.button-28:hover {
  color: #fff;
  background-color: #1a1a1a;
  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
  transform: translateY(-2px);
}

.button-28:active {
  box-shadow: none;
  transform: translateY(0);
}

.button-get {
  margin-left: 200px;
  margin-right: 200px;
  margin-top: 50px;
}

/*Signup*/
.screen-center {
  display: flex;
  justify-content: center;
  align-items: center;
}
.from-cards {
  background-color: white;
  height: 520px;
  width: 400px;
  border-radius: 10px;
  padding: 30px;
}
.from-cards h2 {
  text-align: center;
}
.button-29 {
  appearance: none;
  background-color: transparent;
  border: 2px solid #151515;
  border-radius: 15px;
  box-sizing: border-box;
  color: #151515;
  cursor: pointer;
  display: inline-block;
  font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  font-weight: 600;
  line-height: normal;
  margin: 0;
  min-height: 20px;
  min-width: 0;
  outline: none;
  padding: 10px 24px;
  text-align: center;
  text-decoration: none;
  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  width: 100%;
  will-change: transform;
}

.button-29:disabled {
  pointer-events: none;
}

.button-29:hover {
  color: #fff;
  background-color: #1a1a1a;
  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
  transform: translateY(-2px);
}

.button-29:active {
  box-shadow: none;
  transform: translateY(0);
}
.form-group {
  padding-top: 20px;
}
.button-center {
  padding-top: 20px;
  display: grid;
  place-items: center;
}
.account {
  padding-top: 5px;
  text-align: center;
}
/*Signup*/

/*Alert*/
/* .alert-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5); 
  z-index: 999; 
  display: none; 
  transition: opacity 0.3s ease-in-out; 
}

.alert-overlay.active {
  display: block; 
  opacity: 1; 
} */
.alert {
  position: fixed;
  background-color: red;
  text-align: center;
  color: white;
  width: 350px;
  padding: 15px;
  border-radius: 5px;
  margin: 50px 0px 0px -10px;
  transition: opacity 0.3s ease-in-out;
  z-index: 1000;
  display: none;
}
.success-message,
.update-success-message {
  background-color: rgb(7, 42, 72);
  position: fixed;
  border-radius: 10px;
  color: white;
  height: 100px;
  width: 250px;
  z-index: 90;
  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  margin-left: 20%;
  margin-top: -80px;
}
.succes-text,
.update-success-text {
  padding: 20px;
  padding-top: 30px;
  text-align: center;
}
.alert-log {
  position: fixed;
  background-color: red;
  text-align: center;
  color: white;
  width: 350px;
  padding: 15px;
  border-radius: 5px;
  margin: 50px 0px 0px -10px;
  transition: opacity 0.3s ease-in-out;
  z-index: 1000;
}

.close-button {
  position: absolute;
  top: 5px;
  right: 10px;
  font-size: 20px;
  cursor: pointer;
}

.close-button:hover {
  transform: scale(1.1);
}

.show {
  opacity: 1;
  transform: translateY(0);
}

.hide {
  opacity: 0;
  transform: translateY(-100%);
}

/*Alert*/

/*Dashboard*/
/* Dashboard Container */
.dashboard-container {
  display: flex;
  background-color: rgb(255, 255, 255);
  color: rgb(54, 54, 54);
  /* padding: 20px; */
  height: 100vh;
}
.dashboard-header {
  display: flex;
  align-items: center; /* Vertically align items */
}

.dashboard-header h2 {
  margin-right: 10px; /* Adjust the margin as needed to separate text and button */
}

.note-card-margin {
  margin-top: 10px; /* Adjust the margin-top value as needed */
}

/* Sidebar Styles */
.sidebar {
  color: white;
  width: 20%;
  padding: 20px;
  background-color: rgb(18, 18, 18);
  border-right: 1px solid white;
  position: relative;
}

.sidebar h2 {
  font-size: 24px;
}

.sidebar h5 {
  font-weight: 300;
}

/* .sidebar .btn-danger{
  margin-top: 400px;
  width: 220px;
} */

/* Main Content */
.main-content {
  flex: 1;
  padding: 70px;
}

input[type="text"],
textarea {
  width: 100%;
  padding: 10px;
  margin-bottom: 10px;
}

button {
  background-color: #007bff;
  color: white;
  padding: 10px 20px;
  border: none;
  cursor: pointer;
}

/* CSS */
.button-40 {
  background-color: #111827;
  border: 1px solid transparent;
  border-radius: 0.75rem;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  flex: 0 0 auto;
  font-family: "Inter var", ui-sans-serif, system-ui, -apple-system, system-ui,
    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  font-weight: 600;
  line-height: 1.5rem;
  padding: 0.75rem 1.2rem;
  text-align: center;
  text-decoration: none #6b7280 solid;
  text-decoration-thickness: auto;
  transition-duration: 0.2s;
  transition-property: background-color, border-color, color, fill, stroke;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  width: auto;
}

.button-40:hover {
  background-color: #374151;
}

.button-40:focus {
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: 2px;
}

@media (min-width: 768px) {
  .button-40 {
    padding: 0.75rem 1.5rem;
  }
}

/*get notes*/
.note-card {
  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
  padding: 20px;
  width: 100%;
}
.notes {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.Developer-credits{
  position: absolute;
  bottom: 0;
  margin-bottom: 100px;
  left: 0;
  width: 100%;
  font-size: 11px;
  text-align: center;
}
/**get notes/
/*Dashboard End*/
/* .toggle-sidebar-button {
  display: none;
}
.close-button {
  display: none;
} */

@media (min-width: 769px) {
  .close-button {
    display: none;
  }
}
@media (max-width: 768px) {
  .sidebar {
    color: white;
    width: 20%;
    padding: 20px;
    background-color: rgb(18, 18, 18);
    border-right: 1px solid white;
    position: absolute;
  }
  .toggle-sidebar-button {
    position: fixed;
    background-color: white;
    color: #111827;
    padding: 20px;
    border: none;
    cursor: pointer;
  }
  .close-button {
    position: absolute;
    top: 10px;
    right: 10px;
    background: none;
    border: none;
    color: white;
    font-size: 20px;
    cursor: pointer;
  }
  .sidebar {
    display: flex;
    flex-direction: column;
    top: 0;
    left: -250px;
    width: 250px;
    height: 100%;
    background-color: #111827;
    color: white;
    z-index: 100;
    transition: left 0.3s ease-in-out;
  }

  .sidebar-content {
    margin-top: 20px;
    padding: 10px;
    flex-grow: 1;
  }


  .show-sidebar {
    left: 0;
  }

  .pagination-container {
    display: flex;
    justify-content: center;
    margin-top: 50px;
  }
}
.logout-button-container {
  position: absolute;
  bottom: 0;
  margin-bottom: 60px;
  left: 0;
  width: 100%;
  text-align: center;
}
/*Pagination*/
.pagination-container {
  display: flex;
  justify-content: center;
  margin-top: 20px;
}

.pagination .page-item.active .page-link {
  background-color: #111827;
  border-color: #111827;
}

.pagination .page-link {
  color: #111827;
}

.pagination .page-link:hover {
  background-color: #111827;
  color: white;
}

/*Pagination*/

